# ThreatExchange

python-threatexchange/client/: README.md  pyproject.toml
python-threatexchange/client/client/: __init__.py  base.py  client.py  exceptions.py  models.py
python-threatexchange/client/client/endpoints/: __init__.py  privacy_groups.py  threat_descriptors.py  threat_exchange_members.py  threat_indicators.py  threat_tags.py  threat_updates.py
python-threatexchange/client/examples/: README.md  create_descriptor.py  search_descriptors.py  sync_updates.py
python-threatexchange/client/tests/: __init__.py  test_client.py
